syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 first = 1;
  int32 second = 2;
}

message SumResponse{
  int32 sum = 1;
}

message PrimeNumberDecompositionRequest{
  int32 num = 1;
}

message PrimeNumberDecompositionResponse{
  int32 prime_factor = 1;
}

message ComputeAverageRequest{
  int32 num = 1;
}

message ComputeAverageResponse{
  double average = 1;
}

message FindMaximumRequest{
  int32 num = 1;
}

message FindMaximumResponse{
  int32 max = 1;
}

service CalculatorService{
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc DecomposeNumber(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

  rpc ComputeAverage(stream ComputeAverageRequest) returns (stream ComputeAverageResponse) {};

  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}